[tool.poetry]
name = "meetup"
version = "0.1.0"
description = "Event basen social platform"
authors = ["Yusuf Ulusoy <info@yusufulusoy.com.tr>"]
repository = "https://github.com/yusufulusoy/meetup"

[tool.poetry.dependencies]
python = "3.10"
Django = "4.0.2"
dj-database-url = "^0.5.0"
gunicorn = "^20.1.0"
uvicorn = "^0.17.5"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
pylint = "^2.12.2"
pylint-celery = "^0.3"
pylint-django = "^2.5.2"
pre-commit = "^2.17.0"
pycodestyle = "^2.8.0"
pydocstyle = "^6.1.1"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
